--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   page_transition: ^1.1.5
   provider: ^4.0.1
+  intl: ^0.16.1
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
