--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   page_transition: ^1.1.5
   provider: ^4.0.1
   intl: ^0.16.1
+  fluttertoast: ^3.1.3
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
