--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   provider: ^4.0.1
   intl: ^0.16.1
   fluttertoast: ^3.1.3
+  flutter_masked_text: ^0.8.0
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
