--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.16.1
   fluttertoast: ^3.1.3
   flutter_masked_text: ^0.8.0
+  flutter_progress_button: ^1.0.0
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
