--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   fluttertoast: ^3.1.3
   flutter_masked_text: ^0.8.0
   flutter_progress_button: ^1.0.0
+  dynamic_theme: ^1.0.1
+  shared_preferences: ^0.5.6
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
