--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_progress_button: ^1.0.0
   shared_preferences: ^0.5.6
   flutter_spinkit: ^4.1.1
+  page_view_indicators: ^1.3.1
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
