--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,17 +73,42 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Gilroy
+      fonts:
+        - asset: assets/fonts/Gilroy-Regular.otf
+        - asset: assets/fonts/Gilroy-RegularItalic.otf
+          style: italic
+        - asset: assets/fonts/Gilroy-Light.otf
+          weight: 300
+        - asset: assets/fonts/Gilroy-LightItalic.otf
+          weight: 300
+          style: italic
+        - asset: assets/fonts/Gilroy-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Gilroy-MediumItalic.otf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/Gilroy-SemiBold.otf
+          weight: 600
+        - asset: assets/fonts/Gilroy-SemiBoldItalic.otf
+          style: italic
+          weight: 600
+        - asset: assets/fonts/Gilroy-Bold.otf
+          weight: 700
+        - asset: assets/fonts/Gilroy-BoldItalic.otf
+          style: italic
+          weight: 700
+        - asset: assets/fonts/Gilroy-ExtraBold.otf
+          weight: 800
+        - asset: assets/fonts/Gilroy-ExtraBoldItalic.otf
+          style: italic
+          weight: 800
+        - asset: assets/fonts/Gilroy-Black.otf
+          weight: 900
+        - asset: assets/fonts/Gilroy-BlackItalic.otf
+          style: italic
+          weight: 900
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
