--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   shared_preferences: ^0.5.6
   flutter_spinkit: ^4.1.1
   page_view_indicators: ^1.3.1
-  sliding_up_panel: ^0.3.6
+  sliding_up_panel: ^1.0.0
+  clay_containers:
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
