--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   page_view_indicators: ^1.3.1
   sliding_up_panel: ^1.0.0
   clay_containers:
+  cached_network_image: ^2.0.0
+  simple_animations: ^1.3.6
   # Firebase
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
