--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,11 @@ dependencies:
   clay_containers:
   cached_network_image: ^2.0.0
   simple_animations: ^1.3.6
+  image_picker: 0.6.3+1
+  image_cropper: 1.2.0
   # Firebase
   firebase_core: ^0.4.0+9
+  firebase_storage: ^3.1.1
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
