--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,13 @@ dependencies:
   image_picker: 0.6.3+1
   image_cropper: 1.2.0
   # Firebase
-  firebase_core: ^0.4.0+9
+  firebase_core: ^0.4.3+2
   firebase_storage: ^3.1.1
   firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
+  firebase_auth: ^0.15.3+1
   cloud_firestore: ^0.12.9+5
+  # Firebase helpers
+  firebase_user_stream: ^0.1.0+2
   # Facebook login (with Firebase)
   flutter_facebook_login: ^3.0.0
   # Google login (with Firebase)
