--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -73,7 +73,9 @@
 	<string>This app requires access to the photo library in order for you to choose a new profile picture.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Camera access is required to take a picture.</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
