--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   simple_animations: ^1.3.6
   image_picker: 0.6.3+1
   image_cropper: 1.2.0
+  simple_gravatar: 1.0.5
   # Firebase
   firebase_core: ^0.4.3+2
   firebase_storage: ^3.1.1
