--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   image_picker: 0.6.3+1
   image_cropper: 1.2.0
   simple_gravatar: 1.0.5
+  app_settings: 3.0.0+1
+  native_state: 1.0.2
   # Firebase
   firebase_core: ^0.4.3+2
   firebase_storage: ^3.1.1
