feat(SettingsScreen): add link to privacy and terms of use

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   simple_gravatar: 1.0.5
   app_settings: 3.0.0+1
   native_state: 1.0.2
+  url_launcher:
   # Firebase
   firebase_core: ^0.4.3+2
   firebase_storage: ^3.1.1
