--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   simple_gravatar: 1.0.5
   app_settings: 3.0.0+1
   url_launcher:
+  flutter_launcher_icons: ^0.7.4
   # Firebase
   firebase_core: ^0.4.3+2
   firebase_storage: ^3.1.1
@@ -61,6 +62,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/goals_icon_light.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
