chore: add firebase_messaging

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -65,6 +65,8 @@ target 'Runner' do
   pod 'Flutter', :path => 'Flutter'
 
   # Plugin Pods
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Messaging'
 
   # Prepare symlinks folder. We use symlinks to avoid having Podfile.lock
   # referring to absolute paths on developers' machines.
