--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   app_settings: 3.0.0+1
   url_launcher:
   flutter_launcher_icons: ^0.7.4
+  in_app_purchase: 0.3.1+1
   # Firebase
   firebase_core: ^0.4.3+2
   firebase_storage: ^3.1.1
