--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,7 +51,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera access is required to take a picture.</string>
+	<string>Camera access is required to take a photo for you to use as a profile picture.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires access to the photo library in order for you to choose a new profile picture.</string>
 	<key>UIBackgroundModes</key>
